--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.1 【今日阅读】https://inertiajs.com/ Inertia.js lets you quickly build modern single-page React, Vue and Svelte apps using classic server-side routing and controllers.
+
 5.31 【今日阅读】https://itnext.io/things-to-think-before-enabling-feature-toggle-in-your-application-91880373a0ed Define the type of toggle and life expectancy before starting to implement.
 
 5.30 【今日阅读】https://www.inf.ed.ac.uk/teaching/courses/pi/2016_2017/phil/tufte-powerpoint.pdf PowerPoint 每页的低分辨率，导致信息需要在时间维度堆叠。人类的硬件却是在所有信息都能在空间上同时呈现时工作更佳。把什么信息装入同一个屏幕内很关键。
