--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.2 【今日阅读】https://juejin.cn/post/6968647527239254029 如果你在负责（或作为 team leader 在跟进）前端组的组件库开发。并且，你的组件库提供给多个产品线在使用；并且，你发现组件库工作出现很多的“魔改”，“版本分化”，而且你对这件事情很介意；那么本分享可能适用于你；
+
 6.1 【今日阅读】https://inertiajs.com/ Inertia.js lets you quickly build modern single-page React, Vue and Svelte apps using classic server-side routing and controllers.
 
 5.31 【今日阅读】https://itnext.io/things-to-think-before-enabling-feature-toggle-in-your-application-91880373a0ed Define the type of toggle and life expectancy before starting to implement.
