--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+6.4 【今日阅读】https://zhuanlan.zhihu.com/p/25169261 《噢，你的代码像一坨翔。然后呢？》4年前我写了这篇文章，列举了我尝试过的各种药方。4年后，这是我给的答案 https://mp.weixin.qq.com/s/UtBkJYpQHIvRQ_AQnzxxMw
+
+6.3 【今日阅读】https://lobste.rs/s/mtatsi/unix_shell_programming_next_50_years The copy of FreeBSD that I run locally has a prototype of two things that I keep meaning to share more publicly: content negotiation for pipes and multiple streams for the tty.
+
 6.2 【今日阅读】https://juejin.cn/post/6968647527239254029 如果你在负责（或作为 team leader 在跟进）前端组的组件库开发。并且，你的组件库提供给多个产品线在使用；并且，你发现组件库工作出现很多的“魔改”，“版本分化”，而且你对这件事情很介意；那么本分享可能适用于你；
 
 6.1 【今日阅读】https://inertiajs.com/ Inertia.js lets you quickly build modern single-page React, Vue and Svelte apps using classic server-side routing and controllers.
