--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.5 【今日阅读】https://lobste.rs/s/fuqmad/faster_you_unlearn_oop_better_for_you_your The faster you unlearn OOP, the better for you and your software
+
 6.4 【今日阅读】https://zhuanlan.zhihu.com/p/25169261 《噢，你的代码像一坨翔。然后呢？》4年前我写了这篇文章，列举了我尝试过的各种药方。4年后，这是我给的答案 https://mp.weixin.qq.com/s/UtBkJYpQHIvRQ_AQnzxxMw
 
 6.3 【今日阅读】https://lobste.rs/s/mtatsi/unix_shell_programming_next_50_years The copy of FreeBSD that I run locally has a prototype of two things that I keep meaning to share more publicly: content negotiation for pipes and multiple streams for the tty.
