--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.7 【今日阅读】https://zhuanlan.zhihu.com/p/378232554 当把《分析模式》生搬硬套到外汇业务
+
 6.6 【今日阅读】https://blog.codingnow.com/2017/06/overwatch_ecs.html 浅谈《守望先锋》中的 ECS 构架
 
 6.5 【今日阅读】https://lobste.rs/s/fuqmad/faster_you_unlearn_oop_better_for_you_your The faster you unlearn OOP, the better for you and your software
