--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.10 【今日阅读】https://lobste.rs/s/euswuc/glue_dark_matter_software 胶水代码：软件的黑物质
+
 6.9 【今日阅读】https://www.hillelwayne.com/post/cleverness/ We talk about cleverness as if it’s Just Bad, such as “clever code is harder to debug”. That’s going too far. Cleverness can lead to faster, safer, even clearer code. I’m going to call this class of cleverness “insightful” to distinguish them.
 
 6.8 【今日阅读】https://www.youtube.com/watch?v=FKFu78ZEIi8 CQRS 的创造者 Greg Young 分享 Why Event Sourced Systems Fail
