--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.12 【今日阅读】https://lobste.rs/s/tcmn0u/don_t_feed_thought_leaders A Hedgehog had one big idea like free-market capitalism (or nordic model capitalism or demand-side economics), which they used as a lens to look at many issues. Foxes were the opposite of hedgehogs. They had complicated advice and were skeptical of even their own predictions. Tetlock also found that foxes were less likely to be famous because contingent advice is harder to explain in a sound bite.
+
 6.11 【今日阅读】https://rtpg.co/2021/06/07/changes-checklist.html 数据库表结构迁移，逐步检查清单
 
 6.10 【今日阅读】https://lobste.rs/s/euswuc/glue_dark_matter_software 胶水代码：软件的黑物质
