--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.14 【今日阅读】https://thenewstack.io/how-culture-impacts-technology-choice-a-review-of-netflixs-use-of-microservices/ How Culture Impacts Technology Choice: A Review of Netflix’s Use of Microservices
+
 6.13 【今日阅读】https://spectrum.ieee.org/cars-that-think/transportation/advanced-cars/software-eating-car Even low-end vehicles are quickly approaching 100 ECUs and 100 million of lines of code as more features that were once considered luxury options, such as adaptive cruise control and automatic emergency braking, are becoming standard.
 
 6.12 【今日阅读】https://lobste.rs/s/tcmn0u/don_t_feed_thought_leaders A Hedgehog had one big idea like free-market capitalism (or nordic model capitalism or demand-side economics), which they used as a lens to look at many issues. Foxes were the opposite of hedgehogs. They had complicated advice and were skeptical of even their own predictions. Tetlock also found that foxes were less likely to be famous because contingent advice is harder to explain in a sound bite.
