--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.15 【今日阅读】https://lobste.rs/s/dg3cku/two_different_views_what_decoupled_code Two Different Views of What Decoupled Code Means
+
 6.14 【今日阅读】https://thenewstack.io/how-culture-impacts-technology-choice-a-review-of-netflixs-use-of-microservices/ How Culture Impacts Technology Choice: A Review of Netflix’s Use of Microservices
 
 6.13 【今日阅读】https://spectrum.ieee.org/cars-that-think/transportation/advanced-cars/software-eating-car Even low-end vehicles are quickly approaching 100 ECUs and 100 million of lines of code as more features that were once considered luxury options, such as adaptive cruise control and automatic emergency braking, are becoming standard.
