--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,6 +1,6 @@
 6.17 【今日阅读】https://buttondown.email/hillelwayne/archive/comment-the-why-and-the-what/ I disagree: No matter how self-documenting the code is, comments help a lot with understanding stuff. Whenever I go back to an old project, I find the comments far more useful to reorient myself than my code or my tests. Here are some cases where adding the “what” is really helpful.
 
-6.16 【今日阅读】https://henrikwarne.com/2021/06/15/on-comments-in-code/。关于代码里的注释
+6.16 【今日阅读】https://henrikwarne.com/2021/06/15/on-comments-in-code/ 关于代码里的注释
 
 6.15 【今日阅读】https://lobste.rs/s/dg3cku/two_different_views_what_decoupled_code Two Different Views of What Decoupled Code Means
 
