--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.18 【今日阅读】https://ocw.mit.edu/high-school/humanities-and-social-sciences/godel-escher-bach/video-lectures/ https://godel-escher-bach.fandom.com/wiki/G%C3%B6del,_Escher,_Bach_Wiki the book expounds concepts fundamental to mathematics, symmetry, and intelligence. Through short stories, illustrations, and analysis, the book discusses how systems can acquire meaningful context despite being made of "meaningless" elements. It also discusses self-reference and formal rules, isomorphism, what it means to communicate, how knowledge can be represented and stored, the methods and limitations of symbolic representation, and even the fundamental notion of "meaning" itself.
+
 6.17 【今日阅读】https://buttondown.email/hillelwayne/archive/comment-the-why-and-the-what/ I disagree: No matter how self-documenting the code is, comments help a lot with understanding stuff. Whenever I go back to an old project, I find the comments far more useful to reorient myself than my code or my tests. Here are some cases where adding the “what” is really helpful.
 
 6.16 【今日阅读】https://henrikwarne.com/2021/06/15/on-comments-in-code/ 关于代码里的注释
