--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.21 【今日阅读】https://mp.weixin.qq.com/s/2dUYEYvlizLPiou792HVKA 什么是业务，什么是业务架构？
+
 6.20 【今日阅读】https://factorio.com/blog/post/fff-366 The only way to go fast is to go well
 
 6.19 【今日阅读】https://testing.googleblog.com/2016/08/hackable-projects.html?m=1 google 分享的 hackable projects 三篇系列文章
