--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.25 【今日阅读】https://zhuanlan.zhihu.com/p/383129585 不能满足需求，为了满足多个业务的复用需求，不得不把组件修改到很别扭的程度，参数失控，版本无法管理
+
 6.24 【今日阅读】https://downtimeproject.com/podcast/7-lessons-from-10-outages/ 7 种常见的 outage 原因，以及大量事故案例复盘
 
 6.23 【今日阅读】https://instadeq.com/blog/posts/past-futures-of-programming-general-magic-telescript/ 读的时候让我又想起了 smalltalk 的 seaside http://book.seaside.st/book/fundamentals/anchors/callbacks 为什么一个 object 只能存在于一个进程，锁死在一个设备里，为什么不能让 object 在进程之间迁移，一会在这里执行，一会在那里执行。如果鸿蒙能够促使万物互联，将来参与交互的设备可能不仅仅是手机和服务器，也许目前以单个设备为中心的编程世界观也会被动摇，迎来 seaside 模式的复兴。
