--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.26 【今日阅读】https://elisabethirgens.github.io/notes/2021/06/code-reviews/ Pull requests are an improvement on working alone. But not on working together. Required reviews makes me sad
+
 6.25 【今日阅读】https://zhuanlan.zhihu.com/p/383129585 不能满足需求，为了满足多个业务的复用需求，不得不把组件修改到很别扭的程度，参数失控，版本无法管理
 
 6.24 【今日阅读】https://downtimeproject.com/podcast/7-lessons-from-10-outages/ 7 种常见的 outage 原因，以及大量事故案例复盘
