--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+6.28 【今日阅读】https://www.youtube.com/watch?v=gCWtkvDQ2ZI What are conflicts, really? When defs "compete for a name" A totally artificial problem. Rethinking anything and everything about programming
+
+6.27 【今日阅读】https://lobste.rs/s/63eb9g/when_rewrite I find it’s useful to go through the mental exercise of “how would I do this differently if I were to start from scratch?” and then separately think about “is there a more direct way to get from here to there?”
+
 6.26 【今日阅读】https://elisabethirgens.github.io/notes/2021/06/code-reviews/ Pull requests are an improvement on working alone. But not on working together. Required reviews makes me sad
 
 6.25 【今日阅读】https://zhuanlan.zhihu.com/p/383129585 不能满足需求，为了满足多个业务的复用需求，不得不把组件修改到很别扭的程度，参数失控，版本无法管理
