--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+6.29 【今日阅读】http://suckless.org/philosophy/ Most hackers actually don't care much about code quality. Thus, if they get something working which seems to solve a problem, they stick with it. If this kind of software development is applied to the same source code throughout its entire life-cycle, we're left with large amounts of code, a totally screwed code structure, and a flawed system design. This is because of a lack of conceptual clarity and integrity in the development process.
+
 6.28 【今日阅读】https://www.youtube.com/watch?v=gCWtkvDQ2ZI What are conflicts, really? When defs "compete for a name" A totally artificial problem. Rethinking anything and everything about programming
 
 6.27 【今日阅读】https://lobste.rs/s/63eb9g/when_rewrite I find it’s useful to go through the mental exercise of “how would I do this differently if I were to start from scratch?” and then separately think about “is there a more direct way to get from here to there?”
