--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.2 【今日阅读】https://principles.dev/p/ Principle-Driven Engineering (PDE) is a methodology that uses Principles to rapidly share understanding and behavior in teams and technology organizations, making them more productive.
+
 7.1 【今日阅读】https://www.rainforestqa.com/blog/accessible-quality Asking Developers to Do QA Is Broken. Here’s Why We Built a Product to Let Anyone Own QA.
 
 6.30 【今日阅读】https://blog.csdn.net/significantfrank/article/details/85785565 COLA 作者会出来怼星环（ https://mp.weixin.qq.com/s/AeUfHAcWvAs4HmyMX0rkCA ）其实并不奇怪
