--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.4 【今日阅读】https://medium.com/hackernoon/leaky-by-design-7b423142ece0 In some cases, the problem with the abstraction and the cause of leakiness is that the abstraction tries to abstract or hide “the wrong thing”. 
+
 7.3 【今日阅读】https://mp.weixin.qq.com/s/KiWiaLyaBd79MrgCRwAjxw 现在环顾四周，我们会发现日常生活中常常会用到一些非常复杂的系统：智能手机、计算机、打印机、汽车、电视、烤面包机…… 虽然我们自己很难自行从零制造这样的一个机器，但是不论这些设备或系统多么复杂，我们都可以正常使用它们来完成日常所需的工作。 那为什么会有 抽象泄漏（Leaky Abstractions）？
 
 7.2 【今日阅读】https://principles.dev/p/ Principle-Driven Engineering (PDE) is a methodology that uses Principles to rapidly share understanding and behavior in teams and technology organizations, making them more productive.
