--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.5 【今日阅读】把软件的行为想象成一个基于帧的动画。我们用不同的表述状态的方式（http://canonical.org/~kragen/memory-models/）来表述一个静态的帧。然后需要描述第一帧，如何变化到第二帧。按照时序，一步步描述是一种方式。直接表述帧与帧之间的映射关系，是另外一种方式。重读 Out of tarpit （http://curtclifton.net/papers/MoseleyMarks06a.pdf） 感受一下这两种表述方式的区别。
+
 7.4 【今日阅读】https://medium.com/hackernoon/leaky-by-design-7b423142ece0 In some cases, the problem with the abstraction and the cause of leakiness is that the abstraction tries to abstract or hide “the wrong thing”. 
 
 7.3 【今日阅读】https://mp.weixin.qq.com/s/KiWiaLyaBd79MrgCRwAjxw 现在环顾四周，我们会发现日常生活中常常会用到一些非常复杂的系统：智能手机、计算机、打印机、汽车、电视、烤面包机…… 虽然我们自己很难自行从零制造这样的一个机器，但是不论这些设备或系统多么复杂，我们都可以正常使用它们来完成日常所需的工作。 那为什么会有 抽象泄漏（Leaky Abstractions）？
