--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.6 【今日阅读】https://lobste.rs/s/8msejg/notes_on_structured_concurrency_go Treat threads like stack variables. That’s it. That’s the tweet. Don’t let them outlive the function they’re spawned from, and everything gets a whole lot easier to reason about. 
+
 7.5 【今日阅读】把软件的行为想象成一个基于帧的动画。我们用不同的表述状态的方式（ http://canonical.org/~kragen/memory-models/ ）来表述一个静态的帧。然后需要描述第一帧，如何变化到第二帧。按照时序，一步步描述是一种方式。直接表述帧与帧之间的映射关系，是另外一种方式。重读 Out of tarpit （ http://curtclifton.net/papers/MoseleyMarks06a.pdf ） 感受一下这两种表述方式的区别。
 
 7.4 【今日阅读】https://medium.com/hackernoon/leaky-by-design-7b423142ece0 In some cases, the problem with the abstraction and the cause of leakiness is that the abstraction tries to abstract or hide “the wrong thing”. 
