--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.8 【今日阅读】https://programmingisterrible.com/post/176657481103/repeat-yourself-do-more-than-one-thing-and A given module often gets changed because it is the easiest module to change, rather than the best place for the change to be made. In the end, what defines a module is what pieces of the system it will never responsible for, rather what it is currently responsible for.
+
 7.7 【今日阅读】https://github.com/hwayne/lets-prove-leftpad/ 通过简单的例子来学习“形式化证明”有什么用，是如何工作的
 
 7.6 【今日阅读】https://lobste.rs/s/8msejg/notes_on_structured_concurrency_go Treat threads like stack variables. That’s it. That’s the tweet. Don’t let them outlive the function they’re spawned from, and everything gets a whole lot easier to reason about. 
