--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+7.11 【今日阅读】https://programmingisterrible.com/post/139222674273/how-to-write-disposable-code-in-large-systems Every line of code written comes at a price: maintenance. To avoid paying for a lot of code, we build reusable software. The problem with code re-use is that it gets in the way of changing your mind later on.
+
+7.10 【今日阅读】https://16bpp.net/blog/post/automated-testing-of-a-ray-tracer/ Unit Testing vs. Integration Testing (for a Ray Tracer)
+
 7.9 【今日阅读】https://erikbern.com/2021/07/07/the-data-team-a-short-story.html 数据团队应该怎么弄才合理
 
 7.8 【今日阅读】https://programmingisterrible.com/post/176657481103/repeat-yourself-do-more-than-one-thing-and A given module often gets changed because it is the easiest module to change, rather than the best place for the change to be made. In the end, what defines a module is what pieces of the system it will never responsible for, rather what it is currently responsible for.
