--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.13 【今日阅读】https://littlegreenviper.com/miscellany/testing-harness-vs-unit/ Compared to unit tests, a test harness is a [usually] simple standalone application that incorporates the system under test, and presents a user interface. Since it is for testing, it may expose internal metrics and allow the user to access parts of the code that are usually hidden. I prefer using test harnesses. Here’s why.
+
 7.12 【今日阅读】https://www.sicpers.info/2021/07/my-proposal-for-scaling-open-source-dont/ the companies are hyper-concerned about “growth” because when you’ve got a billion users, your shareholders want to know where the next hundred million are coming from, not the next twenty
 
 7.11 【今日阅读】https://programmingisterrible.com/post/139222674273/how-to-write-disposable-code-in-large-systems Every line of code written comes at a price: maintenance. To avoid paying for a lot of code, we build reusable software. The problem with code re-use is that it gets in the way of changing your mind later on.
