--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.16 【今日阅读】https://github.com/esrlabs/josh Combine the advantages of a monorepo with those of multirepo setups by leveraging a blazingly-fast, incremental, and reversible implementation of git history filtering.
+
 7.15 【今日阅读】https://www.youtube.com/watch?v=l5NeBQ_3bS8 Building Knowledge in an Interdisciplinary World
 
 7.14 【今日阅读】https://chriswarrick.com/blog/2018/07/17/pipenv-promises-a-lot-delivers-very-little/ Pipenv: promises a lot, delivers very little
