--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.17 【今日阅读】https://lobste.rs/s/pp5blh/why_are_graph_databases_not_more_popular 为什么图数据库没有更流行？
+
 7.16 【今日阅读】https://github.com/esrlabs/josh Combine the advantages of a monorepo with those of multirepo setups by leveraging a blazingly-fast, incremental, and reversible implementation of git history filtering.
 
 7.15 【今日阅读】https://www.youtube.com/watch?v=l5NeBQ_3bS8 Building Knowledge in an Interdisciplinary World
