--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.18 【今日阅读】https://zhuanlan.zhihu.com/p/375634204 表面上 tensorflow 和 pytorch 是静态和动态之争，内里还是一个分工问题。tf就是一个大公司的产品，不同的团队来负责不同的东西，每个团队做的东西，在他们内部都说逻辑自洽的，木有任何问题，一旦配合起来就是非常痛苦。而pytorch则是走的理念+ 社区的道路。pytorch只捡取了最核心的部分，实现了，剩下的东西都交给了社区。这一点非常好，一是之前的代码可以复用，二是社区自动票选出最好的实现。这个过程已经熟练到惊人的程度了。
+
 7.17 【今日阅读】https://lobste.rs/s/pp5blh/why_are_graph_databases_not_more_popular 为什么图数据库没有更流行？
 
 7.16 【今日阅读】https://github.com/esrlabs/josh Combine the advantages of a monorepo with those of multirepo setups by leveraging a blazingly-fast, incremental, and reversible implementation of git history filtering.
