--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.22 【今日阅读】https://www.snellman.net/blog/archive/2021-07-21-monorepo-atomic/ A monorepo misconception - atomic cross-project commits
+
 7.21 【今日阅读】http://paulbuchheit.blogspot.com/2009/01/communicating-with-code.html you should consider spending less time talking, and more time prototyping, especially if you're not very good at talking or powerpoint. Your code can be a very persuasive argument.
 
 7.20 【今日阅读】https://lobste.rs/s/9n7aic/what_i_learned_from_software_engineering What I learned from Software Engineering at Google。Automate common tasks，Stubs and mocks make bad tests，Small frequent releases，Upgrade dependencies early, fast, and often，Expert makes everyone’s update
