--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.23 【今日阅读】https://lobste.rs/s/howzf7/planning_estimating_large_scale Planning & estimating large-scale software projects
+
 7.22 【今日阅读】https://www.snellman.net/blog/archive/2021-07-21-monorepo-atomic/ A monorepo misconception - atomic cross-project commits
 
 7.21 【今日阅读】http://paulbuchheit.blogspot.com/2009/01/communicating-with-code.html you should consider spending less time talking, and more time prototyping, especially if you're not very good at talking or powerpoint. Your code can be a very persuasive argument.
