--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.25 【今日阅读】http://www.oilshell.org/blog/2021/07/spolsky.html Classic Blog Posts by Joel Spolsky
+
 7.24 【今日阅读】https://lobste.rs/s/wzb4gl/modeling_mutual_friendship the two-row model seems to be substantially simpler for ad-hoc manual and analytic queries, if you need those (and it’s a nice thing to have). The single-row model will quickly become tedious or would again require pre-processing.
 
 7.23 【今日阅读】https://lobste.rs/s/howzf7/planning_estimating_large_scale Planning & estimating large-scale software projects
