--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.27 【今日阅读】https://mp.weixin.qq.com/s/opCnSlnKYhrNkjP8xN-EGA 在大仓模式和主干开发的模式下， 我们可以更方便地主动去为其他组的项目提交代码，例如修复缺陷或实现我们所需的新功能。这个组可能是姐妹组，也可能是相隔甚远的项目组。我们认为作者对代码有太强的归属感，即有强烈的领地意识，对开放协作文化有害。隐藏代码或不允许别人触碰自己编写的代码是反模式。允许别人修改，自己由 CR 做最终决定，是更为开放和有效的合作模式。
+
 7.26 【今日阅读】https://buttondown.email/nelhage/archive/papers-i-love-gg/ a tool called gg, which is designed to allow users to use cloud computation — including “function-as-a-service” systems like Amazon Lambda — to outsource everyday computation (such as software builds) from their laptops to the cloud, without requiring users to provision or manage a standing compute cluster.
 
 7.25 【今日阅读】http://www.oilshell.org/blog/2021/07/spolsky.html Classic Blog Posts by Joel Spolsky
