--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,6 @@
+7.29 【今日阅读】http://yosefk.com/blog/10x-more-selective.html working on 'products' values more such things as 'completeness' at the expense of 'efficiency'.
+Working on 'service' your work must reasonably fulfill the customers use cases; most often at the expense of 'completeness'; As a consultant you might try to minimize the effort that has to be put into a task, while completing the customers spec.
+
 7.28 【今日阅读】https://zhuanlan.zhihu.com/p/393041071 几年前还经常听到有人说觉得CUDA写的程序不够高效，会自己逆向构建一个SASS汇编器来撰写汇编kernel，还可以说CUDA这一层存在leaky abstraction。这一两年，这样做的人已经越来越少了。将CUDA视为一个不存在leaky abstraction的抽象层应该不会太有争议。随着时间的推移，NV的软件栈系统里的leaky abstractions会不会越来越少呢？
 
 7.27 【今日阅读】https://mp.weixin.qq.com/s/opCnSlnKYhrNkjP8xN-EGA 在大仓模式和主干开发的模式下， 我们可以更方便地主动去为其他组的项目提交代码，例如修复缺陷或实现我们所需的新功能。这个组可能是姐妹组，也可能是相隔甚远的项目组。我们认为作者对代码有太强的归属感，即有强烈的领地意识，对开放协作文化有害。隐藏代码或不允许别人触碰自己编写的代码是反模式。允许别人修改，自己由 CR 做最终决定，是更为开放和有效的合作模式。
