--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.30 【今日阅读】https://copyconstruct.medium.com/distributed-tracing-weve-been-doing-it-wrong-39fc92a857df If you truly have a mind-bogglingly complex distributed system, then no one single person can have a complete understanding of the system in their head at any given time. debugging is a tool that’ll help reduce the search space, so that engineers can zero in on a subset of dimensions (services/users/hosts etc.) that are of interest to the debugging scenario at hand.
+
 7.29 【今日阅读】http://yosefk.com/blog/10x-more-selective.html working on 'products' values more such things as 'completeness' at the expense of 'efficiency'.
 Working on 'service' your work must reasonably fulfill the customers use cases; most often at the expense of 'completeness'; As a consultant you might try to minimize the effort that has to be put into a task, while completing the customers spec.
 
