--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.3 【今日阅读】https://mp.weixin.qq.com/s/ciYlvX6tQ7TaF0_5rRYN-Q 对抗软件系统复杂性②：全局一致，统一隐喻
+
 8.2 【今日阅读】https://news.ycombinator.com/item?id=28017289 I require myself to retype any examples, stack overflows, and so on in the process of learning. Along the way, I get a handle on the patterns of the language. And if I'm learning in an IDE, the autocomplete suggestions start to hint at the other functions within libraries, etc.
 
 8.1 【今日阅读】https://stackoverflow.blog/2021/07/28/700000-lines-of-code-20-years-and-one-developer-how-dwarf-fortress-is-built/ 700,000 lines of code, 20 years, and one developer: How Dwarf Fortress is built
