--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.4 【今日阅读】https://mp.weixin.qq.com/s/QfbIioMrFNpnmvp_GycKVA 帐，是结果，是固定的，稳定的。即便是账错了，也要留痕迹红冲更正的。单据，代表了过程，代表了状态和数量的不稳定，一直到过账（审核）后才稳定下来。现在，稳定态的对象，和一个不稳定的对象，强行绑在了一起，麻烦由此而起。
+
 8.3 【今日阅读】https://mp.weixin.qq.com/s/ciYlvX6tQ7TaF0_5rRYN-Q 对抗软件系统复杂性②：全局一致，统一隐喻
 
 8.2 【今日阅读】https://news.ycombinator.com/item?id=28017289 I require myself to retype any examples, stack overflows, and so on in the process of learning. Along the way, I get a handle on the patterns of the language. And if I'm learning in an IDE, the autocomplete suggestions start to hint at the other functions within libraries, etc.
