--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+8.7 【今日阅读】https://mp.weixin.qq.com/s/YgRnFCgtI1sSmT5U5KkIcg 以神经系统来说，当我们伸手去摸一个水壶，在被水壶烫的那一刻发生了什么呢？手马上就弹回来，半秒钟后大脑才意识到烫。这里面包含两套决策机制，手上的基层神经系统瞬间就已经做出了反应——让手快速离开，同时信息被上报到中央的决策机构——大脑，大脑半秒钟后才意识到被烫，并做出更加宏观、高层次的决策。因此，比尔所采用的“可生存系统模型”强调，一个有效的复杂系统是中央领导和局部主观能动性的有机结合。
+
+8.6 【今日阅读】http://mikehadlow.blogspot.com/2012/05/configuration-complexity-clock.html?m=1 从代码，到配置，到规则引擎，到dsl。然后回到原点
+
 8.5 【今日阅读】https://blog.deref.io/unix-and-microservice-platforms/ Write programs that do one thing and do it well. Write programs to work together. Write programs to handle text streams, because that is a universal interface. Often, this philosophy is further shortened to just the first sentence.
 
 8.4 【今日阅读】https://mp.weixin.qq.com/s/QfbIioMrFNpnmvp_GycKVA 帐，是结果，是固定的，稳定的。即便是账错了，也要留痕迹红冲更正的。单据，代表了过程，代表了状态和数量的不稳定，一直到过账（审核）后才稳定下来。现在，稳定态的对象，和一个不稳定的对象，强行绑在了一起，麻烦由此而起。
