--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.9 【今日阅读】https://basecamp.com/shapeup/3.4-chapter-13#work-is-like-a-hill 如何让开发者上报更多的信息来支撑改进？让他们把 uncertainty 表达出来？work is like a hill 是一种可以考虑的管理手段。其核心是用6个离散的刻度来代替精确的百分比，度量 uncertainty 而不是 #% lines of code written 。因为时间不是花在“写”代码上，而是花在 reduce uncertainty 上。 
+
 8.8 【今日阅读】https://news.ycombinator.com/item?id=28098578 又在讨论 framework 和 library 的区别是啥
 
 8.7 【今日阅读】https://mp.weixin.qq.com/s/YgRnFCgtI1sSmT5U5KkIcg 以神经系统来说，当我们伸手去摸一个水壶，在被水壶烫的那一刻发生了什么呢？手马上就弹回来，半秒钟后大脑才意识到烫。这里面包含两套决策机制，手上的基层神经系统瞬间就已经做出了反应——让手快速离开，同时信息被上报到中央的决策机构——大脑，大脑半秒钟后才意识到被烫，并做出更加宏观、高层次的决策。因此，比尔所采用的“可生存系统模型”强调，一个有效的复杂系统是中央领导和局部主观能动性的有机结合。
