--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.11 【今日阅读】https://jesseduffield.com/Beyond-Coupling-And-Cohesion/ Here we have two microservices which always need to change at the same time, meaning that unlike in the previous example, we would never have one service being updated on its own. This typically means that for each change, A needs to pass B some different parameters, or call a new endpoint. And that means B needs to remain backwards compatible with A for the brief gap between their two deployments. The solution to this problem is to just combine the two microservices into one! Slightly less micro but still provides a service.
+
 8.10 【今日阅读】https://zhuanlan.zhihu.com/p/397697428 还有另一种，NV的一些调度逻辑（比如control codes），也从硬件转移到了软件。这个应该是因为编译器具有更全局的视野，可以更好的做依赖分析和指令调度，同时也简化硬件设计，节省面积。
 
 8.9 【今日阅读】https://basecamp.com/shapeup/3.4-chapter-13#work-is-like-a-hill 如何让开发者上报更多的信息来支撑改进？让他们把 uncertainty 表达出来？work is like a hill 是一种可以考虑的管理手段。其核心是用6个离散的刻度来代替精确的百分比，度量 uncertainty 而不是 #% lines of code written 。因为时间不是花在“写”代码上，而是花在 reduce uncertainty 上。 
