--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.14 【今日阅读】https://css-tricks.com/bem-101/ This is the main reason we end up with bloated code bases, full of legacy and unknown CSS that we daren’t touch. We lack the confidence to be able to work with and modify existing styles because we fear the consequences of CSS’ globally operating and leaky nature. 
+
 8.13 【今日阅读】https://livebook.manning.com/book/the-programmers-brain/welcome/v-5/ When you read code, solve a problem, or write code, your brain is working all the time. While the brain plays a significant role in programming, I have found that most programmers do not understand how the brain processes code.
 
 8.12 【今日阅读】https://ryougifujino.com/post/10 模块化的重要性：大多数关心软件架构的人都会强调模块化对一个良好系统的重要性。如果我面临着对一个模块化程度很低的系统做一个小小的改动，我就必须了解它的几乎所有内容，因为即使是一个小改动也可能波及代码库的许多部分。然而，有了良好的模块化，我只需要了解一两个模块的代码，以及另几个模块的接口，而可以忽略剩下的。这种降低我理解难度的能力，就是为什么随着系统的发展，值得在模块化上投入如此多的努力的原因。
