--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.17 【今日阅读】https://blog.pragmatists.com/test-doubles-fakes-mocks-and-stubs-1a7491dfa3da  图示 fake/mock/stub 的区别
+
 8.16 【今日阅读】https://github.com/google/highway/blob/master/g3doc/highway_intro.pdf  为了让代码支持更多种的 CPU，无法对 SIMD 的 vector 长度做硬编码。又指望不上编译器能短时间内提供高质量的优化。C++ 这种方便制作 eDSL 的语言就可以发挥威力了
 
 8.15 【今日阅读】https://www.youtube.com/watch?v=FL8CxUSfipM 打开汽车厂商的黑盒，使用开源软件控制你家的汽车自动驾驶，现已支持100多种型号
