--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.18 【今日阅读】http://probcomp.csail.mit.edu/software/bayesdb/ find me the 10 colleges most like MIT and Harvard with regards to graduates’ median income, but admissions rates over 10%，find me radiation measurements from the Safecast.org project that are most likely to be errors and/or legitimate anomalies，generate some EEG measurements we might expect for a child in Bangladesh at age 3 years of age, given all the other EEG measurements we have observed so far，what genetic markers, if any, predict increased risk of suicide given a PTSD diagnosis? and how confident can we be in the amount of increase, given uncertainty due to statistical sampling and the large number of possible alternative explanations?
+
 8.17 【今日阅读】https://blog.pragmatists.com/test-doubles-fakes-mocks-and-stubs-1a7491dfa3da  图示 fake/mock/stub 的区别
 
 8.16 【今日阅读】https://github.com/google/highway/blob/master/g3doc/highway_intro.pdf  为了让代码支持更多种的 CPU，无法对 SIMD 的 vector 长度做硬编码。又指望不上编译器能短时间内提供高质量的优化。C++ 这种方便制作 eDSL 的语言就可以发挥威力了
