--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.20 【今日阅读】https://lobste.rs/s/v8iqgb/configuration_configuration_files_is Programmers love generality, and to some degree don't want to do language design, so I understand the eternal appeal of some universal language for program configurations.  
+
 8.19 【今日阅读】https://www.youtube.com/watch?v=lgZ7Cxt5uIU Teaching Great Programmers: Is it possible? By whom? How?
 
 8.18 【今日阅读】http://probcomp.csail.mit.edu/software/bayesdb/ find me the 10 colleges most like MIT and Harvard with regards to graduates’ median income, but admissions rates over 10%，find me radiation measurements from the Safecast.org project that are most likely to be errors and/or legitimate anomalies，generate some EEG measurements we might expect for a child in Bangladesh at age 3 years of age, given all the other EEG measurements we have observed so far，what genetic markers, if any, predict increased risk of suicide given a PTSD diagnosis? and how confident can we be in the amount of increase, given uncertainty due to statistical sampling and the large number of possible alternative explanations?
