--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.21 【今日阅读】https://jvns.ca/blog/confusing-explanations/ why do I find all these explanations so confusing? I decided to try and find out! I came up with a list of 12 patterns that make explanations hard for me to understand. For each pattern I’ll also explain what I like to do instead to avoid the issue.
+
 8.20 【今日阅读】https://lobste.rs/s/v8iqgb/configuration_configuration_files_is Programmers love generality, and to some degree don't want to do language design, so I understand the eternal appeal of some universal language for program configurations.  
 
 8.19 【今日阅读】https://www.youtube.com/watch?v=lgZ7Cxt5uIU Teaching Great Programmers: Is it possible? By whom? How?
