--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.23 【今日阅读】https://burak-kirazli.medium.com/an-alternative-conditional-compilation-approach-with-modern-c-e94b46100a29 An Alternative Conditional Compilation Approach with Modern C++
+
 8.22 【今日阅读】https://slack.engineering/data-lineage-at-slack/ To ensure that lineage is ingested for dashboards, we leverage audit tables that track dashboard usage. If a dashboard pulled data in the last 24 hours, we consider it “active” and send a request to the lineage service.
 
 8.21 【今日阅读】https://jvns.ca/blog/confusing-explanations/ why do I find all these explanations so confusing? I decided to try and find out! I came up with a list of 12 patterns that make explanations hard for me to understand. For each pattern I’ll also explain what I like to do instead to avoid the issue.
