--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.25 【今日阅读】https://mp.weixin.qq.com/s/nqPAMe92d7WJrwFf2ogG3A 在企业中，度量数据的获取一定要实现自动化，如果你的度量数据都依赖于工程师的手工录入来获取，一方面工程师会对此种工作模式十分反感，另一方面会让后续的度量分析完全失去意义，因为人工录入的数据或多或少已经存在了很多失真，而且很多数据的录入时间是有很大参考价值的，如果数据不是实时获取，而是人工填充的，那么数据本身就失去了度量的意义。
+
 8.24 【今日阅读】https://mp.weixin.qq.com/s/h9zIg2e8iHn3qgxlUGObbQ 优秀的度量体系设计对目标会有很强的正向牵引作用，不恰当的度量体系往往会引发一场“腥风血雨”。
 
 8.23 【今日阅读】https://burak-kirazli.medium.com/an-alternative-conditional-compilation-approach-with-modern-c-e94b46100a29 An Alternative Conditional Compilation Approach with Modern C++
