--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.27 【今日阅读】https://blog.jim-nielsen.com/2021/useful-and-usless-code-comments/ Unfortunately, many comments are not particularly helpful. The most common reason is that comments repeat the code: all of the information in the comment can easily be deduced from the code next to the comment.
+
 8.26 【今日阅读】https://news.ycombinator.com/item?id=28304420 	We Hire Old People
 
 8.25 【今日阅读】https://mp.weixin.qq.com/s/nqPAMe92d7WJrwFf2ogG3A 在企业中，度量数据的获取一定要实现自动化，如果你的度量数据都依赖于工程师的手工录入来获取，一方面工程师会对此种工作模式十分反感，另一方面会让后续的度量分析完全失去意义，因为人工录入的数据或多或少已经存在了很多失真，而且很多数据的录入时间是有很大参考价值的，如果数据不是实时获取，而是人工填充的，那么数据本身就失去了度量的意义。
