--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.28 【今日阅读】https://danluu.com/why-benchmark/ If anything, because measurement is, like writing, not generally valued, it's much easier to find high ROI measurement projects than high ROI building projects.
+
 8.27 【今日阅读】https://blog.jim-nielsen.com/2021/useful-and-usless-code-comments/ Unfortunately, many comments are not particularly helpful. The most common reason is that comments repeat the code: all of the information in the comment can easily be deduced from the code next to the comment.
 
 8.26 【今日阅读】https://news.ycombinator.com/item?id=28304420 	We Hire Old People
