--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.30 【今日阅读】https://michaelfeathers.silvrback.com/system-personas-and-design-integrity One of the things that Dijkstra spoke about often was anthropomorphism—seeing code and systems as human-like; things with awareness and intention. The short story is: Dijkstra was against it.
+
 8.29 【今日阅读】https://www.colorado.edu/artssciences-advising/resource-library/life-skills/the-feynman-technique-in-academic-coaching If you can’t explain it to a six-year-old, you don’t understand it yourself.
 
 8.28 【今日阅读】https://danluu.com/why-benchmark/ If anything, because measurement is, like writing, not generally valued, it's much easier to find high ROI measurement projects than high ROI building projects.
