--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.31 【今日阅读】https://mp.weixin.qq.com/s/9X16ent8kNaUI64GC0xorw MBC方案解决的问题：核心业务既要高性能又要灵活性的问题，研发流程中产研配合效率低下的问题
+
 8.30 【今日阅读】https://michaelfeathers.silvrback.com/system-personas-and-design-integrity One of the things that Dijkstra spoke about often was anthropomorphism—seeing code and systems as human-like; things with awareness and intention. The short story is: Dijkstra was against it.
 
 8.29 【今日阅读】https://www.colorado.edu/artssciences-advising/resource-library/life-skills/the-feynman-technique-in-academic-coaching If you can’t explain it to a six-year-old, you don’t understand it yourself.
