--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.2 【今日阅读】https://mp.weixin.qq.com/s/TP7X_BmTmiETfxQ5cz4rPw 既然阿里SPU体系已经十分成熟，为什么闲鱼不使用现有淘系的SPU系统，要重新搭建一套体系呢？淘系的SPU系统经过多方共建已经可以达到新发商品实时落库，俨然成为庞大的数据体系，但结合闲鱼业务侧的诉求，我们面临的问题有哪些?
+
 9.1 【今日阅读】https://lobste.rs/s/fear8c/why_we_don_t_do_daily_stand_ups_at_supercede Why We Don't Do Daily Stand-Ups at Supercede
 
 8.31 【今日阅读】https://mp.weixin.qq.com/s/9X16ent8kNaUI64GC0xorw MBC方案解决的问题：核心业务既要高性能又要灵活性的问题，研发流程中产研配合效率低下的问题
