--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.3 【今日阅读】https://news.ycombinator.com/item?id=28397238 As someone who's spent quite a bit of time thinking about authorization in GraphQL APIs, I think that the only viable option for authorization in GraphQL is node level authorization, especially if using the relay convention. You're forced to write every authorization check as a function of the relationship between the user and the subject at hand and it avoids accidentally leaking information
+
 9.2 【今日阅读】https://mp.weixin.qq.com/s/TP7X_BmTmiETfxQ5cz4rPw 既然阿里SPU体系已经十分成熟，为什么闲鱼不使用现有淘系的SPU系统，要重新搭建一套体系呢？淘系的SPU系统经过多方共建已经可以达到新发商品实时落库，俨然成为庞大的数据体系，但结合闲鱼业务侧的诉求，我们面临的问题有哪些?
 
 9.1 【今日阅读】https://lobste.rs/s/fear8c/why_we_don_t_do_daily_stand_ups_at_supercede Why We Don't Do Daily Stand-Ups at Supercede
