--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.6 【今日阅读】https://neverworkintheory.org/2021/08/23/links-in-source-code-comments.html   Almost 10% of the links included in source code comments are dead. 没有静态类型检查的东西是靠不住的
+
 9.5 【今日阅读】https://codecatalog.org/  Code Catalog is a collection of instructive code examples with annotations.
 
 9.4 【今日阅读】https://eli.thegreenplace.net/2017/benefits-of-dependencies-in-software-projects-as-a-function-of-effort/   The more effort is spent on a project in terms of engineer-years, the less benefit dependencies have. For short, low-effort projects dependencies are hugely beneficial. For long, multi-person multi-year projects, not so much. In fact, for such longer-term projects the costs of dependencies begin to outweigh their benefits.
