--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.7 【今日阅读】https://neverworkintheory.org/2021/08/29/software-development-waste.html Software Development Waste: Building the wrong feature or product, Mismanaging the backlog, Rework, Unnecessarily complex solutions, Extraneous cognitive load, Psychological distress, Waiting/multitasking, Knowledge loss, Ineffective communication
+
 9.6 【今日阅读】https://neverworkintheory.org/2021/08/23/links-in-source-code-comments.html   Almost 10% of the links included in source code comments are dead. 没有静态类型检查的东西是靠不住的
 
 9.5 【今日阅读】https://codecatalog.org/  Code Catalog is a collection of instructive code examples with annotations.
