--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.9 【今日阅读】https://mp.weixin.qq.com/s/XHrKSNxXKJtjawmJTfV2uA If tech leads are still engineers, where should their focus be if it isn’t writing code like it was beforehand? With these new demands, how should a lead prioritize what is most important, especially when demands stack up faster than they can be addressed and when it comes at the expense of your morning’s to-do list?
+
 9.8 【今日阅读】https://www.pmi.org/learning/library/planning-process-indispensable-software-projects-7487 No battle is won according to the plan but no battle is won without a plan
 
 9.7 【今日阅读】https://neverworkintheory.org/2021/08/29/software-development-waste.html Software Development Waste: Building the wrong feature or product, Mismanaging the backlog, Rework, Unnecessarily complex solutions, Extraneous cognitive load, Psychological distress, Waiting/multitasking, Knowledge loss, Ineffective communication
