--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.12 【今日阅读】https://mp.weixin.qq.com/s/hXRCbyKQl25ZshyJ9aXDag 理流程，定单据，填功能
+
 9.11 【今日阅读】https://lobste.rs/s/a9ghhz/maintain_it_with_zig it’s not going to be possible to boil the ocean and throw out all existing unsafe software, but we can at least simplify things by using simpler and more direct dependency management in C/C++.
 
 9.10 【今日阅读】https://medium.com/event-driven-utopia/a-visual-introduction-to-debezium-32563e23c6b8 A story-based introduction to understanding what Debezium is, how it is made of, and how it works in a real-world scenario
