--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.13 【今日阅读】https://neverworkintheory.org/2021/09/12/developer-testing-in-the-ide.html half of developers do not test at all; most programming sessions end without any test execution; 12% of tests show flaky behavior; test-driven development (TDD) is not widely practiced; and software developers only spend a quarter of their time engineering tests, whereas they think they test half of their time.
+
 9.12 【今日阅读】https://mp.weixin.qq.com/s/hXRCbyKQl25ZshyJ9aXDag 理流程，定单据，填功能
 
 9.11 【今日阅读】https://lobste.rs/s/a9ghhz/maintain_it_with_zig it’s not going to be possible to boil the ocean and throw out all existing unsafe software, but we can at least simplify things by using simpler and more direct dependency management in C/C++.
